# f1proj

./: .env.example  .gitignore  =0.39  Makefile  docker-compose.yml  pyproject.toml
backend/: config.py  database.py
backend/api/: deps.py  main.py
backend/api/routers/: ai_analysis.py  circuits.py  driver_dna.py  drivers.py  races.py  season_metrics.py  telemetry.py  tyre_deg.py
backend/ingestion/: fastf1_loader.py  helpers.py  ingest_laps.py  ingest_pitstops.py  ingest_qualifying.py  ingest_race_control.py  ingest_races.py  ingest_static.py  ingest_stints.py  ingest_telemetry.py  ingest_weather.py  jolpica_client.py  openf1_client.py  run_pipeline.py
backend/ml/: generate_season_metrics.py  run_features.py  tracking.py
backend/ml/feature_engineering/: corner_detection.py  corner_profiles.py
backend/ml/models/: driver_dna.py  tyre_degradation.py
backend/models/: __init__.py  base.py  circuit.py  circuit_corner.py  constructor.py  driver.py  driver_corner_stat.py  driver_dna_feature.py  driver_race_entry.py  driver_similarity.py  lap.py  ml_run.py  pit_stop.py  qualifying_result.py  race.py  race_control_message.py  race_result.py  season.py  session.py  team_radio.py  telemetry_sample.py  tyre_deg_curve.py  tyre_stint.py  weather.py
frontend/: package-lock.json  package.json
migrations/: env.py
migrations/versions/: 054a31680622_initial_schema_16_tables.py  4315cc988041_add_ml_tables.py
notebooks/: 01_data_exploration.ipynb  02_telemetry_sampling.ipynb
progress_notes/: phase1.md
tests/: test_helpers.py  test_models.py  test_telemetry_resample.py
(+23 files in other folders)
