[project]
name = "f1proj"
version = "0.1.0"
description = "F1 AI Platform — Data Foundation"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pandas>=2.1",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic-settings>=2.1",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.scripts]
f1-ingest = "backend.ingestion.run_pipeline:main"
